--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Federico Anzani</title>
-    <link rel="stylesheet" href="contacts.css">
+    <link rel="stylesheet" href="about.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Gloock&display=swap');
       </style>
@@ -17,6 +17,50 @@
     </div>
 
     <div class="content">
+
+
+        <div class="blob1" id="uno">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50vh" height="50vh" viewBox="100 100 828.635 809.666">
+                <path fill="none" stroke="#fff" stroke-width="20">
+                    <animate attributeName="d" dur="10s" repeatCount="indefinite" values="
+
+                    M780 712q-35 212-282 216T187.5 716Q124 500 202 309t275.5-151.5Q675 197 745 348.5T780 712Z;
+                    M802.5 655Q679 810 466.5 868.5T185 713.5Q116 500 230.5 366T507 220q162-12 290.5 134t5 301Z;
+                    M780 712q-35 212-282 216T187.5 716Q124 500 202 309t275.5-151.5Q675 197 745 348.5T780 712Z;
+
+                    "/>
+                </path>
+            </svg>
+        </div>
+
+        <div class="blob2" id="due">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50vh" height="50vh" viewBox="100 100 828.635 809.666">
+                <path fill="none" stroke="#fff" stroke-width="20">
+                    <animate attributeName="d" dur="10s" repeatCount="indefinite" values="
+
+                    M802.5 655Q679 810 466.5 868.5T185 713.5Q116 500 230.5 366T507 220q162-12 290.5 134t5 301Z;
+                    M841.5 674Q701 848 482.5 878.5T226 704.5q-38-204.5 8.5-394t273-202.5Q734 95 858 297.5T841.5 674Z;
+                    M802.5 655Q679 810 466.5 868.5T185 713.5Q116 500 230.5 366T507 220q162-12 290.5 134t5 301Z;
+
+                    "/>
+                </path>
+            </svg>
+        </div>
+
+        <div class="blob3" id="tre">
+            <svg xmlns="http://www.w3.org/2000/svg" width="70vh" height="70vh" viewBox="100 100 828.635 809.666">
+                <path fill="none" stroke="#fff" stroke-width="20">
+                    <animate attributeName="d" dur="10s" repeatCount="indefinite" values="
+
+                    M859.5 701.5Q732 903 537.5 837.5T192 636Q41 500 179 341.5t325.5-166Q692 168 839.5 334t20 367.5Z;
+                    M780 712q-35 212-282 216T187.5 716Q124 500 202 309t275.5-151.5Q675 197 745 348.5T780 712Z;
+                    M859.5 701.5Q732 903 537.5 837.5T192 636Q41 500 179 341.5t325.5-166Q692 168 839.5 334t20 367.5Z;
+
+                    "/>
+                </path>
+            </svg>
+        </div>
+
 
     </div>
 </body>
