--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 <body>
     <div class="nav">
-        <a href="./about.html"><span class="link">ABOUT ME</span></a>
+        <a href="#" onclick="working()"><span class="link">ABOUT ME</span></a>
         <a href="./contatti.html"><span class="link">GET IN TOUCH</span></a>
     </div>
+
+    <div id="warning">Section in progress.....</div>
 
     <div class="content">
         <div class="title" id="title">FEDERICO<br>ANZANI</div>
